--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -5,7 +5,7 @@
   position: relative;
   padding-left: $side-menu-width;
   box-shadow: $navbarShadow;
-  z-index: 1;
+  z-index: $zindex-navbar-fixed;
   background: $navbarBackground;
 }
 
