--- a/public/sass/components/_sidemenu.scss
+++ b/public/sass/components/_sidemenu.scss
@@ -5,8 +5,7 @@
   flex-direction: column;
   width: $side-menu-width;
   background: $navbarBackground;
-  z-index: 10;
-
+  z-index: $zindex-sidemenu;
   a:focus {
     text-decoration: none;
   }
@@ -19,7 +18,7 @@
     height: auto;
     box-shadow: $side-menu-shadow;
     position: relative;
-    z-index: 2;
+    z-index: $zindex-sidemenu;
   }
   .sidemenu__top,
   .sidemenu__bottom {
@@ -56,7 +55,7 @@
       // again by the mouse getting outside the hover space
       left: $side-menu-width - 2px;
       @include animation('dropdown-anim 150ms ease-in-out 100ms forwards');
-      z-index: 1;
+      z-index: $zindex-sidemenu;
     }
   }
 }
