--- a/public/sass/pages/_dashboard.scss
+++ b/public/sass/pages/_dashboard.scss
@@ -19,6 +19,7 @@ div.flot-text {
   &--solo {
     .panel-container {
       border: none;
+      z-index: $zindex-sidemenu + 1
     }
   }
 }
@@ -144,14 +145,14 @@ div.flot-text {
   width: 27px;
   height: 27px;
   top: 0;
-  z-index: 10;
+  z-index: 1;
 
   .fa {
     position: relative;
     top: -4px;
     left: -6px;
     font-size: 75%;
-    z-index: 1000;
+    z-index: 1;
   }
 
   &--info {
